--- a/noisehack/src/main/resources/application.properties
+++ b/noisehack/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=noisehack
+spring.data.mongodb.uri=mongodb+srv://okihackmongo:12%40Okimin@noisehack.qcylqcf.mongodb.net/?retryWrites=true&w=majority&appName=NoiseHack
+spring.data.mongodb.database=noisecomplaints
