Added env to gitignore

--- a/noisehack/src/main/resources/application.properties
+++ b/noisehack/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=noisehack
-spring.data.mongodb.database=noisecomplaints
+spring.config.import=file:env.properties
+spring.data.mongodb.uri=${DB_URI}
+spring.data.mongodb.database=${DB_DATABASE}
