--- a/noise-extension/manifest.json
+++ b/noise-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "NYC Address Validator",
+  "name": "Apartment Noise Analysis",
   "version": "1.0.0",
   "description": "Validate addresses in New York City's five boroughs with typo correction and location display",
   "permissions": [
@@ -9,11 +9,12 @@
     "scripting"
   ],
   "host_permissions": [
-    "https://maps.googleapis.com/*"
+    "https://maps.googleapis.com/*",
+    "http://localhost:8080/*"
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "NYC Address Validator",
+    "default_title": "Apartment Noise Analysis",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
@@ -35,7 +36,7 @@
     "type":"module"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https://maps.googleapis.com data:; connect-src 'self' https://maps.googleapis.com;"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https://maps.googleapis.com data:; connect-src 'self' https://maps.googleapis.com http://localhost:8080;"
   },
   "web_accessible_resources": [
     {
