Did a lot but fixed up app

--- a/noisehack/src/main/resources/application.properties
+++ b/noisehack/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=noisehack
 spring.config.import=file:env.properties
 spring.data.mongodb.uri=${DB_URI}
 spring.data.mongodb.database=${DB_DATABASE}
+MAPS_API_KEY=${MAPS_API_KEY}
