--- a/noise-extension/manifest.json
+++ b/noise-extension/manifest.json
@@ -36,7 +36,7 @@
     "type":"module"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https://maps.googleapis.com data:; connect-src 'self' https://maps.googleapis.com http://localhost:8080;"
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https://maps.googleapis.com data:; connect-src 'self' https://maps.googleapis.com https://www.googleadservices.com https://*.googleadservices.com http://localhost:8080;"
   },
   "web_accessible_resources": [
     {
